# zestark-visual-timer

./: .gitignore  Dockerfile.dev  LICENSE  README.md  README.txt  docker-compose.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docx/detail-design/: file-structure.md  setup.md  system-design.html  tech-stack.md
docx/requirements/: requirements.md  screen-design.html  state-transition.html
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alarm.rs  lib.rs  main.rs  notification.rs  timer.rs
src/components/: Settings.tsx
src/components/Clock/: Clock.module.css  Clock.tsx
src/components/Controls/: Controls.module.css  Controls.tsx
src/components/Settings/: Settings.module.css  Settings.tsx
src/components/TimeDisplay/: TimeDisplay.module.css  TimeDisplay.tsx
src/components/Timer/: Timer.module.css  Timer.tsx
src/components/VisualBar/: VisualBar.module.css  VisualBar.tsx  index.ts
src/hooks/: useAlarm.ts  useClock.ts  useTimer.ts
src/lib/: breakSteps.tsx  calcSegments.ts  formatTime.ts  timezones.ts
src/store/: timerReducer.ts  types.ts
src/styles/: global.css  reset.css
test/: e2e-test-spec.html
tests/: timer.spec.ts
